# Antilatency.Alt.CustomCppEnvironmentInCSharp

./: .gitignore  LICENSE  README.md
CSharpHostApplication/: CSharpHostApplication.csproj  CppEnvironmentLibrary.cs  Program.cs
CppEnvironment/: CMakeLists.txt  CppEnvironment.h  Library.cpp
NativeAPI/dotNet/: Antilatency.Alt.Tracking.cs  Antilatency.Bracer.cs  Antilatency.DeviceNetwork.Interop.cs  Antilatency.DeviceNetwork.cs  Antilatency.Math.cs  Antilatency.RadioMetrics.Interop.cs  Antilatency.RadioMetrics.cs  Antilatency.TrackingAlignment.cs
NativeAPI/include/: Antilatency.Api.h
